[gd_scene load_steps=16 format=3 uid="uid://b6a4cr7gvxmmp"]

[ext_resource type="Script" path="res://level_1.gd" id="1_ugg1f"]
[ext_resource type="PackedScene" uid="uid://gaaynusea0v0" path="res://player.tscn" id="2_oxecl"]
[ext_resource type="Environment" uid="uid://yqhn4gshbu1p" path="res://Resources/level_1_environment.tres" id="4_klt84"]
[ext_resource type="PackedScene" uid="uid://clxl6k0n38fxh" path="res://coin.tscn" id="5_juubg"]
[ext_resource type="MeshLibrary" uid="uid://bge4kxcjgqdgt" path="res://Resources/world_blocks_v1.tres" id="5_qi4x1"]
[ext_resource type="PackedScene" uid="uid://dxxktjrqqbt82" path="res://you_win_screen.tscn" id="7_srkpq"]
[ext_resource type="PackedScene" uid="uid://d2kycc86hxukd" path="res://you_lose_screen.tscn" id="8_fmv85"]
[ext_resource type="PackedScene" uid="uid://b6xembwwepbeg" path="res://tree.tscn" id="9_0rm7y"]
[ext_resource type="Script" path="res://you_lose_screen.gd" id="9_arpr5"]
[ext_resource type="PackedScene" uid="uid://c6eiyyshjqyes" path="res://statue.tscn" id="10_a1vd7"]
[ext_resource type="MeshLibrary" uid="uid://ckj4kg021t2me" path="res://Resources/trash_mesh.tres" id="11_pegew"]

[sub_resource type="SystemFont" id="SystemFont_crcao"]

[sub_resource type="LabelSettings" id="LabelSettings_pwpjl"]
font = SubResource("SystemFont_crcao")
font_size = 32

[sub_resource type="SystemFont" id="SystemFont_rledq"]

[sub_resource type="LabelSettings" id="LabelSettings_mx7e7"]
font = SubResource("SystemFont_rledq")
font_size = 32

[node name="Level1" type="Node3D"]
script = ExtResource("1_ugg1f")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.921423, -0.0288565, 0.387488, -0.388561, -0.0684296, 0.918878, -2.56484e-09, -0.997239, -0.0742652, 3.20543, 6.06997, 0.331282)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_oxecl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.00831, 3.08418)

[node name="Coins" type="Node3D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.2945, 2.86537, 2.97973)

[node name="Coin2" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2562, 4.64204, 24.9965)

[node name="Coin3" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.39065, 6.92621, 31.1238)

[node name="Coin4" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.05339, 3.08774, -10.2819)

[node name="Coin5" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.4783, 2.77976, -6.77368)

[node name="Coin6" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0549, 8.64095, -30.4586)

[node name="Coin7" parent="Coins" instance=ExtResource("5_juubg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50.3531, 8.75651, 9.52049)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_klt84")

[node name="WorldBlockMap" type="GridMap" parent="."]
mesh_library = ExtResource("5_qi4x1")
data = {
"cells": PackedInt32Array(1, 65534, 0, 0, 65534, 0, 0, 65535, 0, 1, 65535, 0, 1, 0, 0, 0, 0, 0, 65535, 0, 0, 65535, 65535, 0, 65535, 65534, 0, 2, 65534, 0, 2, 65535, 0, 2, 1, 0, 2, 0, 0, 1, 1, 0, 0, 1, 0, 3, 65533, 589824, 3, 65534, 589824, 3, 65535, 589824, 3, 0, 589824, 3, 1, 1179648, 3, 65532, 589824, 2, 65532, 1245184, 2, 65533, 589824, 1, 65533, 589824, 0, 65533, 589824, 65535, 65533, 589824, 3, 2, 1245184, 2, 2, 655360, 4, 65532, 655360, 4, 65533, 1245184, 4, 65534, 655360, 4, 65535, 1048576, 4, 1, 655360, 4, 0, 655360, 4, 2, 655360, 1, 2, 655360, 0, 2, 655360, 65535, 2, 655360, 65535, 1, 655360, 1, 65532, 1048576, 0, 65532, 1048576, 65535, 65532, 1048576, 65534, 65534, 1048576, 65534, 65535, 1048576, 65534, 0, 1048576, 65534, 1, 1048576, 65534, 2, 1245184, 65534, 3, 1048576, 65535, 3, 1048576, 0, 4, 1441792, 65535, 4, 1441792, 65535, 5, 1441792, 0, 5, 1441792, 4, 3, 1245184, 4, 4, 1245184, 3, 3, 1245184, 3, 4, 1245184, 2, 3, 1245184, 2, 4, 1245184, 2, 5, 1245184, 1, 5, 1245184, 1, 6, 1245184, 0, 6, 1245184, 65534, 6, 1245184, 65535, 6, 1245184, 65534, 5, 1245184, 65534, 4, 1245184, 65533, 5, 1245184, 65533, 4, 1245184, 65533, 3, 1245184, 65533, 1, 1245184, 65533, 2, 1245184, 65533, 0, 1245184, 65533, 65535, 1245184, 65533, 65534, 1245184, 65534, 65533, 1245184, 65534, 65532, 1048576, 65533, 65533, 1245184, 65533, 65532, 1048576, 65533, 65531, 1048576, 65534, 65531, 1048576, 65535, 65531, 1048576, 0, 65531, 1048576, 1, 65531, 1048576, 2, 65531, 1048576, 3, 65531, 1245184, 4, 65531, 1048576, 5, 65531, 1048576, 5, 65532, 1048576, 5, 65533, 1245184, 5, 65534, 1048576, 5, 65535, 1048576, 5, 0, 1048576, 5, 1, 1048576, 5, 2, 1048576, 5, 3, 1048576, 5, 4, 1048576, 5, 5, 1048576, 4, 5, 1048576, 3, 5, 1048576, 3, 6, 1048576, 2, 6, 1048576, 65533, 6, 1048576, 65532, 6, 1048576, 65532, 5, 1048576, 65532, 4, 1048576, 65532, 3, 1048576, 65532, 2, 1048576, 65532, 1, 1048576, 65532, 0, 1048576, 65532, 65535, 1048576, 65532, 65534, 1048576, 65532, 65533, 1245184, 65531, 65533, 1245184, 65530, 65533, 1245184, 65529, 65533, 1245184, 65528, 65533, 1245184, 65527, 65533, 1245184, 65527, 65534, 1245184, 65527, 65535, 1245184, 65527, 1, 1245184, 65527, 0, 1245184, 65527, 2, 1245184, 65527, 4, 1245184, 65527, 6, 1245184, 65527, 5, 1245184, 65527, 3, 1245184, 6, 65533, 1245184, 65527, 65532, 1245184, 65527, 65531, 1245184, 65527, 65530, 1245184, 65528, 65530, 1245184, 65529, 65530, 1245184, 65530, 65530, 1245184, 65530, 65529, 1245184, 65530, 65528, 1245184, 65530, 65526, 1245184, 65530, 65527, 1245184, 65531, 65526, 1245184, 65532, 65526, 1245184, 65533, 65526, 1245184, 65534, 65526, 1245184, 65535, 65526, 1245184, 65535, 65527, 1245184, 65535, 65528, 1245184, 0, 65528, 1245184, 1, 65528, 1245184, 2, 65528, 1245184, 2, 65529, 1245184, 3, 65529, 1245184, 3, 65530, 1245184, 6, 65534, 1048576, 6, 65535, 1048576, 6, 1, 1048576, 6, 2, 1048576, 6, 3, 1048576, 6, 4, 1048576, 6, 5, 1048576, 6, 6, 1048576, 6, 0, 1048576, 7, 6, 1048576, 7, 5, 1048576, 8, 5, 1048576, 8, 4, 1048576, 8, 3, 1048576, 8, 2, 1048576, 8, 1, 1048576, 9, 0, 1048576, 9, 65535, 1048576, 9, 65534, 1048576, 9, 65533, 1048576, 9, 65532, 1048576, 8, 65532, 1048576, 8, 65531, 1048576, 8, 65530, 1048576, 7, 65531, 1048576, 7, 65530, 1048576, 6, 65530, 1048576, 7, 65529, 1048576, 6, 65529, 1048576, 5, 65529, 1048576, 5, 65530, 1048576, 4, 65530, 1048576, 4, 65529, 1048576, 4, 65528, 1048576, 4, 65527, 1048576, 3, 65527, 1048576, 3, 65528, 1048576, 4, 65526, 1048576, 3, 65526, 1048576, 3, 65525, 1048576, 2, 65525, 1048576, 2, 65526, 1048576, 2, 65527, 1048576, 1, 65527, 1245184, 1, 65526, 1245184, 0, 65526, 1048576, 0, 65525, 1048576, 0, 65527, 1048576, 1, 65525, 1245184, 1, 65524, 1245184, 0, 65524, 1048576, 65535, 65524, 1048576, 65534, 65524, 1048576, 65533, 65525, 1048576, 65533, 65524, 1048576, 65532, 65525, 1048576, 65531, 65525, 1048576, 65530, 65525, 1048576, 65531, 65524, 1048576, 65532, 65524, 1048576, 65535, 65525, 1048576, 65534, 65525, 1048576, 65530, 65524, 1048576, 65529, 65524, 1048576, 65528, 65524, 1048576, 65527, 65524, 1048576, 65527, 65525, 1048576, 65527, 65526, 1048576, 65526, 65527, 1048576, 65526, 65528, 1048576, 65526, 65529, 1048576, 65527, 65529, 1048576, 65527, 65528, 1048576, 65528, 65528, 1048576, 65527, 65527, 1048576, 65528, 65527, 1048576, 65528, 65529, 1048576, 65529, 65528, 1048576, 65529, 65527, 1048576, 65529, 65526, 1048576, 65529, 65525, 1048576, 65528, 65525, 1048576, 65528, 65526, 1048576, 65529, 65529, 1048576, 65528, 65531, 1048576, 65528, 65532, 1048576, 65529, 65532, 1048576, 65530, 65532, 1048576, 65530, 65531, 1048576, 65529, 65531, 1048576, 65531, 65531, 1048576, 65531, 65532, 1048576, 65532, 65532, 1048576, 65532, 65531, 1048576, 65532, 65530, 1048576, 65531, 65530, 1048576, 65531, 65529, 1048576, 65531, 65528, 1048576, 65531, 65527, 1048576, 65532, 65527, 1048576, 65533, 65527, 1048576, 65534, 65527, 1048576, 65534, 65528, 1048576, 65533, 65528, 1048576, 65532, 65528, 1048576, 65532, 65529, 1048576, 65533, 65529, 1048576, 65533, 65530, 1048576, 65534, 65529, 1048576, 65535, 65529, 1048576, 65534, 65530, 1048576, 65535, 65530, 1048576, 0, 65530, 1048576, 0, 65529, 1048576, 1, 65529, 1048576, 1, 65530, 1048576, 2, 65530, 1048576, 1, 65523, 1048576, 2, 65523, 1048576, 3, 65523, 1048576, 2, 65524, 1048576, 3, 65524, 1048576, 0, 65523, 1048576, 65528, 65534, 1048576, 65529, 65534, 1048576, 65529, 65535, 1048576, 65530, 65535, 1048576, 65530, 65534, 1048576, 65531, 65534, 1048576, 65531, 65535, 1048576, 65531, 0, 1048576, 65531, 1, 1048576, 65531, 2, 1048576, 65530, 3, 1048576, 65530, 4, 1048576, 65530, 5, 1048576, 65530, 6, 1048576, 65530, 7, 1048576, 65531, 6, 1048576, 65531, 5, 1048576, 65531, 4, 1048576, 65531, 3, 1048576, 65530, 2, 1048576, 65530, 1, 1048576, 65530, 0, 1048576, 65529, 0, 1048576, 65528, 0, 1048576, 65528, 65535, 1048576, 65528, 1, 1048576, 65529, 1, 1048576, 65529, 2, 1048576, 65528, 2, 1048576, 65528, 3, 1048576, 65528, 4, 1048576, 65529, 4, 1048576, 65529, 3, 1048576, 65528, 5, 1048576, 65528, 6, 1048576, 65529, 6, 1048576, 65529, 5, 1048576, 65529, 7, 1048576, 65528, 7, 1048576, 65528, 8, 1048576, 65527, 7, 1048576, 65527, 8, 1048576, 65526, 7, 1048576, 65526, 8, 1048576, 65525, 7, 1048576, 65525, 6, 1048576, 65526, 6, 1048576, 65526, 65530, 1048576, 65526, 65531, 1048576, 65525, 65531, 1048576, 65525, 65532, 1048576, 65526, 65532, 1048576, 65526, 65533, 1048576, 65525, 65533, 1048576, 65525, 65534, 1048576, 65525, 65535, 1048576, 65525, 0, 1048576, 65526, 65535, 1048576, 65526, 65534, 1048576, 65526, 0, 1048576, 65526, 1, 1048576, 65525, 1, 1048576, 65525, 2, 1048576, 65525, 3, 1048576, 65526, 2, 1048576, 65526, 3, 1048576, 65526, 4, 1048576, 65525, 4, 1048576, 65525, 5, 1048576, 65526, 5, 1048576, 1, 3, 1048576, 1, 4, 1048576, 65531, 7, 1048576, 65532, 7, 1048576, 65533, 7, 1048576, 65534, 7, 1048576, 65535, 7, 1048576, 0, 7, 1048576, 0, 8, 1048576, 1, 8, 1048576, 1, 7, 1048576, 2, 7, 1048576, 2, 8, 1048576, 3, 8, 1048576, 3, 7, 1048576, 4, 7, 1048576, 4, 6, 1048576, 7, 4, 1048576, 7, 3, 1048576, 7, 2, 1048576, 7, 1, 1048576, 7, 0, 1048576, 8, 0, 1048576, 8, 65535, 1048576, 7, 65535, 1048576, 7, 65534, 1048576, 7, 65533, 1048576, 8, 65533, 1048576, 8, 65534, 1048576, 7, 65532, 1048576, 6, 65532, 1048576, 6, 65531, 1048576, 0, 3, 1048576, 131066, 5, 1245185, 65541, 5, 1245185, 131065, 65527, 262145, 131063, 65534, 262145, 65536, 65523, 0, 65537, 65523, 0, 65539, 65523, 0, 65538, 65523, 0, 65536, 65522, 0, 65537, 65522, 0, 65538, 65522, 0, 65539, 65522, 0, 131072, 65522, 0, 131073, 65522, 0, 196607, 65522, 0, 196606, 65522, 0, 196605, 65522, 0, 196605, 65521, 0, 196606, 65521, 0, 131072, 65521, 0, 196607, 65521, 0, 131073, 65521, 0, 131061, 65530, 1441792, 131061, 65529, 1441792, 131061, 65528, 1441792, 131061, 65527, 1441792, 131062, 65526, 1441792, 131061, 65526, 1441792, 131060, 65526, 1441792, 131060, 65527, 1441792, 131060, 65528, 1441792, 131060, 65529, 1441792, 131060, 65530, 1441792, 131059, 65529, 1441792, 131058, 65530, 1441792, 131059, 65530, 1441792, 131059, 65528, 1441792, 131059, 65527, 1441792, 131058, 65527, 1441792, 131058, 65528, 1441792, 131058, 65529, 1441792, 131057, 65527, 1441792, 131056, 65528, 1441792, 131056, 65527, 1441792, 131057, 65528, 1441792, 131057, 65529, 1441792, 131056, 65529, 1441792, 131056, 65530, 1441792, 131057, 65530, 1441792, 131057, 65531, 1441792, 131058, 65531, 1441792, 131059, 65531, 1441792, 131055, 65531, 1441792, 131056, 65531, 1441792, 131056, 65532, 1441792, 131057, 65532, 1441792, 131058, 65532, 1441792, 131059, 65533, 1441792, 131058, 65533, 1441792, 131057, 65533, 1441792, 131056, 65533, 1441792, 131055, 65533, 1441792, 131055, 65532, 1441792, 131059, 65532, 1441792, 131055, 65530, 1441792, 196592, 65528, 1441792, 196592, 65527, 1441792, 196594, 65527, 1441792, 196593, 65527, 0, 196592, 65526, 0, 196593, 65526, 0, 196594, 65526, 0, 196595, 65526, 0, 196595, 65525, 0, 196596, 65525, 0, 196595, 65524, 0, 196596, 65524, 0, 196593, 65525, 0, 196594, 65525, 0, 196593, 65524, 0, 196592, 65525, 0, 196592, 65524, 0, 196594, 65524, 0, 131066, 9, 0, 131064, 8, 0, 131065, 8, 0, 131066, 8, 0, 131063, 8, 0, 131062, 8, 0, 131065, 9, 0, 131064, 9, 0, 131063, 9, 0, 131062, 9, 0, 131066, 10, 0, 131065, 10, 0, 131063, 10, 0, 131062, 10, 0, 131064, 10, 0, 131061, 9, 0, 131060, 9, 0, 131060, 10, 0, 131059, 10, 0, 131059, 9, 0, 131058, 9, 0, 131058, 10, 0, 131058, 11, 0, 131057, 11, 0, 131057, 10, 0, 131059, 11, 0, 131061, 11, 0, 131060, 11, 0, 131061, 10, 0, 131062, 11, 0, 131064, 11, 0, 131063, 11, 0, 131065, 11, 0, 131065, 12, 0, 131064, 12, 0, 131063, 12, 0, 131062, 12, 0, 131061, 12, 0, 131060, 12, 0, 131059, 12, 0, 131058, 12, 0, 131060, 13, 0, 131061, 13, 0, 131062, 13, 0, 131063, 13, 0, 131064, 13, 0, 131065, 13, 0, 131066, 14, 0, 131065, 14, 0, 131064, 14, 0, 131064, 15, 0, 131063, 15, 0, 131062, 15, 0, 131061, 15, 0, 131060, 15, 0, 131060, 14, 0, 131061, 14, 0, 131062, 14, 0, 131063, 14, 0, 131067, 13, 0, 131066, 13, 0, 131066, 12, 0, 131066, 11, 0, 131067, 12, 0, 131067, 14, 0, 131067, 16, 0, 131067, 15, 0, 131066, 15, 0, 131065, 15, 0, 131066, 16, 0, 131065, 16, 0, 131064, 16, 0, 131064, 17, 0, 131063, 17, 0, 131062, 16, 0, 131063, 16, 0, 131062, 17, 0, 131061, 16, 0, 131061, 17, 0, 131061, 8, 0, 131060, 8, 0, 131067, 18, 0, 131066, 18, 0, 131067, 17, 0, 131066, 17, 0, 131065, 18, 0, 131065, 17, 0, 196603, 18, 0, 196602, 17, 0, 196603, 17, 0, 196602, 16, 0, 196603, 16, 0, 196603, 15, 0, 196602, 15, 0, 196602, 14, 1441792, 196602, 13, 0, 196601, 13, 0, 196601, 14, 0, 196601, 15, 0, 196601, 16, 0, 196601, 17, 0, 196603, 14, 1441792, 196603, 13, 1441792, 196604, 13, 1441792, 196605, 13, 1441792, 196606, 13, 1441792, 196607, 13, 1441792, 131072, 13, 1441792, 196604, 14, 1441792, 196605, 14, 1441792, 196606, 14, 1441792, 196607, 14, 1441792, 131072, 14, 1441792, 196606, 12, 1441792, 196607, 12, 1441792, 131072, 12, 1441792, 131073, 12, 1441792, 131073, 13, 1441792, 131072, 15, 1441792, 131073, 14, 1441792, 131073, 15, 1441792, 196604, 16, 1441792, 196605, 16, 1441792, 196606, 16, 1441792, 196606, 15, 1441792, 196607, 15, 1441792, 196604, 15, 1441792, 196605, 15, 1441792, 196604, 17, 1441792, 196605, 17, 1441792, 196606, 17, 1441792, 131072, 16, 1441792, 131073, 16, 1441792, 196607, 16, 1441792, 131072, 17, 1441792, 196607, 17, 1441792, 131074, 13, 1441792, 131074, 12, 1441792, 131074, 11, 1441792, 131075, 11, 1441792, 131076, 11, 1441792, 131076, 12, 1441792, 131077, 11, 1441792, 131077, 12, 1441792, 131078, 12, 1441792, 131079, 12, 1441792, 131075, 12, 1441792, 131075, 13, 1441792, 131076, 13, 1441792, 131077, 13, 1441792, 131078, 13, 1441792, 131079, 13, 1441792, 131079, 14, 1441792, 131079, 15, 1441792, 131078, 15, 1441792, 131077, 15, 1441792, 131077, 14, 1441792, 131076, 14, 1441792, 131075, 14, 1441792, 131075, 15, 1441792, 131074, 15, 1441792, 131074, 14, 1441792, 131076, 15, 1441792, 131078, 14, 1441792, 131075, 16, 1441792, 131074, 16, 1441792, 131076, 17, 1441792, 131077, 17, 1441792, 131077, 16, 1441792, 131078, 16, 1441792, 131079, 16, 1441792, 131080, 16, 1441792, 131080, 17, 1441792, 131079, 17, 1441792, 131079, 18, 1441792, 131078, 17, 1441792, 131076, 18, 1441792, 131075, 18, 1441792, 131074, 18, 1441792, 131073, 18, 1441792, 131074, 17, 1441792, 131075, 17, 1441792, 131073, 17, 1441792, 131076, 16, 1441792, 196615, 18, 1441792, 196614, 18, 1441792, 196613, 18, 1441792, 196612, 18, 1441792, 196611, 18, 1441792, 196610, 18, 1441792, 196609, 18, 1441792, 196608, 18, 1441792, 196616, 17, 1441792, 196616, 16, 1441792, 196615, 15, 1441792, 196615, 14, 1441792, 196615, 13, 1441792, 196615, 12, 1441792, 196616, 12, 1441792, 196615, 17, 1441792, 196615, 16, 1441792, 262143, 17, 1441792, 262143, 16, 1441792, 262142, 16, 1441792, 262141, 16, 1441792, 262141, 17, 1441792, 262140, 17, 1441792, 262139, 17, 1441792, 262138, 17, 1441792, 262137, 17, 1441792, 262137, 18, 1441792, 262143, 18, 1441792, 262142, 18, 1441792, 262141, 18, 1441792, 262140, 18, 1441792, 262140, 19, 1441792, 262139, 19, 1441792, 262138, 19, 1441792, 262138, 18, 1441792, 262139, 18, 1441792, 262142, 17, 1441792, 196616, 15, 1441792, 196616, 14, 1441792, 196616, 13, 1441792, 196616, 18, 1441792, 196613, 19, 1441792, 196613, 20, 1441792, 196612, 20, 1441792, 196611, 20, 1441792, 196610, 20, 1441792, 196610, 19, 1441792, 196609, 19, 1441792, 196608, 19, 1441792, 262143, 19, 1441792, 262142, 19, 1441792, 262142, 20, 1441792, 262141, 20, 1441792, 262140, 20, 1441792, 262141, 19, 1441792, 262143, 20, 1441792, 196608, 20, 1441792, 196609, 20, 1441792, 196611, 19, 1441792, 196612, 19, 1441792, 262141, 65521, 0, 262142, 65521, 0, 262143, 65521, 0, 196608, 65521, 0, 196609, 65521, 0, 196610, 65521, 0, 196611, 65521, 0, 196612, 65521, 0, 196613, 65521, 0, 196613, 65520, 0, 262143, 65520, 0, 196608, 65520, 0, 196609, 65520, 0, 196610, 65520, 0, 196611, 65520, 0, 196612, 65520, 0, 196608, 65519, 0, 196609, 65519, 0, 196610, 65519, 0, 196611, 65519, 0, 196612, 65519, 0, 196613, 65519, 0, 196614, 65519, 0, 196615, 65519, 0, 196616, 65519, 0, 196614, 65520, 0, 196615, 65520, 0, 196616, 65520, 0, 196617, 65520, 0, 196616, 65518, 0, 196615, 65518, 0, 196614, 65517, 0, 196613, 65517, 0, 196612, 65517, 0, 196612, 65518, 0, 196613, 65518, 0, 196611, 65518, 0, 196610, 65518, 0, 196609, 65518, 0, 196608, 65518, 0, 196608, 65517, 0, 262143, 65517, 0, 262143, 65516, 0, 262143, 65515, 0, 262143, 65514, 0, 196608, 65514, 0, 196608, 65513, 0, 196609, 65514, 0, 196609, 65515, 0, 196610, 65515, 0, 196611, 65515, 0, 196608, 65515, 0, 196608, 65516, 0, 196609, 65516, 0, 196609, 65517, 0, 196610, 65516, 0, 196611, 65516, 0, 196611, 65517, 0, 196610, 65517, 0, 196612, 65515, 0, 196612, 65514, 0, 196611, 65514, 0, 196612, 65516, 0, 262127, 65535, 0, 262126, 65535, 0, 262126, 0, 0, 262126, 1, 0, 262126, 2, 0, 262126, 3, 0, 262126, 4, 0, 262125, 4, 0, 262125, 5, 0, 262124, 5, 0, 262123, 5, 0, 262122, 5, 0, 262122, 6, 0, 262121, 5, 0, 262120, 5, 0, 262119, 5, 0, 262118, 5, 0, 262118, 4, 0, 262117, 4, 0, 262117, 3, 0, 262117, 2, 0, 262117, 1, 0, 262116, 1, 0, 262116, 0, 0, 262117, 0, 0, 262117, 65535, 0, 262118, 65535, 0, 262118, 65534, 0, 262119, 65535, 0, 262120, 65535, 0, 262120, 0, 0, 262120, 65534, 0, 262119, 65534, 0, 262119, 65533, 0, 262119, 65532, 0, 262118, 65531, 0, 262118, 65530, 0, 262118, 65529, 0, 262118, 65528, 0, 262118, 65527, 0, 262118, 65526, 0, 262119, 65526, 0, 262120, 65526, 0, 262121, 65526, 0, 262121, 65527, 0, 262122, 65527, 0, 262123, 65527, 0, 262123, 65528, 0, 262124, 65528, 0, 262124, 65529, 0, 262125, 65529, 0, 262125, 65530, 0, 262126, 65530, 0, 262126, 65529, 0, 262126, 65531, 0, 262126, 65532, 0, 262127, 65533, 0, 262126, 65533, 0, 262126, 65534, 0, 262125, 2, 0, 262124, 2, 0, 262124, 1, 0, 262124, 0, 0, 262124, 65535, 0, 262124, 65534, 0, 262124, 65533, 0, 262124, 65532, 0, 262125, 65532, 0, 262125, 65531, 0, 262125, 65533, 0, 262125, 65534, 0, 262125, 65535, 0, 262125, 0, 0, 262125, 1, 0, 262125, 3, 0, 262124, 3, 0, 262123, 3, 0, 262122, 3, 0, 262121, 3, 0, 262120, 3, 0, 262119, 3, 0, 262121, 4, 0, 262122, 4, 0, 262123, 4, 0, 262124, 4, 0, 262118, 3, 0, 262118, 2, 0, 262118, 1, 0, 262118, 0, 0, 262119, 0, 0, 262119, 1, 0, 262119, 2, 0, 262119, 4, 0, 262120, 4, 0, 262120, 2, 0, 262120, 1, 0, 262121, 2, 0, 262122, 2, 0, 262122, 1, 0, 262123, 1, 0, 262123, 0, 0, 262123, 65535, 0, 262123, 65534, 0, 262122, 65534, 0, 262122, 65533, 0, 262121, 65533, 0, 262121, 65534, 0, 262121, 0, 0, 262121, 1, 0, 262123, 2, 0, 262122, 0, 0, 262122, 65535, 0, 262121, 65535, 0, 262123, 65533, 0, 262123, 65532, 0, 262123, 65531, 0, 262123, 65530, 0, 262123, 65529, 0, 262122, 65531, 0, 262122, 65532, 0, 262124, 65531, 0, 262124, 65530, 0, 262122, 65530, 0, 262122, 65529, 0, 262121, 65529, 0, 262120, 65529, 0, 262120, 65528, 0, 262121, 65528, 0, 262122, 65528, 0, 262121, 65530, 0, 262121, 65531, 0, 262120, 65531, 0, 262120, 65532, 0, 262120, 65533, 0, 262121, 65532, 0, 262120, 65530, 0, 262120, 65527, 0, 262119, 65527, 0, 262119, 65528, 0, 262119, 65530, 0, 262119, 65529, 0, 262119, 65531, 0, 262117, 65531, 0, 262117, 65532, 0, 262118, 65533, 0, 262118, 65532, 0, 262117, 65530, 0, 262117, 65529, 0, 262117, 65528, 0, 262117, 65527, 0, 262117, 65526, 0, 262117, 65525, 0, 262118, 65523, 0, 262118, 65524, 0, 262119, 65524, 0, 262119, 65525, 0, 262120, 65525, 0, 262121, 65525, 0, 262117, 65524, 0, 262117, 65523, 0, 262118, 65525, 0, 262122, 65526, 0, 262122, 65525, 0, 262123, 65525, 0, 262123, 65526, 0, 262127, 65532, 0, 262127, 65531, 0, 262127, 65530, 0, 262127, 65529, 0, 262127, 65528, 0, 262127, 65527, 0, 262127, 65526, 0, 262127, 65525, 0, 262127, 65524, 0, 196591, 65532, 0, 196592, 65531, 0, 196592, 65530, 0, 196592, 65529, 0, 196592, 65533, 0, 196592, 65532, 0, 196593, 65532, 0, 196593, 65531, 0, 196593, 65530, 0, 196594, 65530, 0, 262124, 65527, 0, 262124, 65526, 0, 262124, 65525, 0, 262124, 65524, 0, 262125, 65524, 0, 262125, 65525, 0, 262126, 65525, 0, 262126, 65526, 0, 262125, 65526, 0, 262125, 65528, 0, 262126, 65528, 0, 262126, 65527, 0, 262125, 65527, 0, 262121, 65524, 0, 262120, 65524, 0, 262120, 65523, 0, 262121, 65523, 0, 262122, 65523, 0, 262122, 65524, 0, 262121, 65522, 0, 262121, 65521, 0, 262122, 65521, 0, 262122, 65520, 0, 262121, 65520, 0, 262120, 65520, 0, 262119, 65520, 0, 262119, 65521, 0, 262119, 65522, 0, 262120, 65522, 0, 262120, 65521, 0, 262119, 65523, 0, 262118, 65522, 0, 262117, 65522, 0, 262123, 6, 0, 262121, 7, 0, 262121, 6, 0, 262120, 6, 0, 262123, 65524, 0, 262122, 65522, 0, 262123, 65522, 0, 262123, 65523, 0, 262124, 65522, 0, 262124, 65521, 0, 262123, 65521, 0, 262124, 65523, 0, 262125, 65523, 0, 262127, 65534, 0, 327658, 4, 1245185, 327657, 65521, 1507329, 196614, 65518, 0)
}
metadata/_editor_floor_ = Vector3(0, 3, -2)

[node name="Timer" type="Timer" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = 51.0
grow_horizontal = 0
label_settings = SubResource("LabelSettings_pwpjl")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 5.0
offset_right = 47.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_mx7e7")

[node name="YouWinScreen" parent="." instance=ExtResource("7_srkpq")]
offset_left = -273.0
offset_top = -177.0
offset_right = -233.0
offset_bottom = -137.0
scale = Vector2(2.44, 2.44)

[node name="YouLoseScreen" parent="." instance=ExtResource("8_fmv85")]
offset_left = -273.0
offset_top = -177.0
offset_right = -233.0
offset_bottom = -137.0
scale = Vector2(2.44, 2.44)
script = ExtResource("9_arpr5")

[node name="Statues" type="Node3D" parent="."]
transform = Transform3D(3.75, 0, 0, 0, 5.625, 0, 0, 0, 3.375, 2, 2, -8)

[node name="statue2" parent="Statues" instance=ExtResource("10_a1vd7")]
transform = Transform3D(1.49819, 0, 0, 0, 0.984754, 0, 0, 0, 1.86997, 1.33156, 0.698022, 10.4863)

[node name="statue" parent="Statues" instance=ExtResource("10_a1vd7")]

[node name="TrashGridMap" type="GridMap" parent="."]
mesh_library = ExtResource("11_pegew")
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 2.0
data = {
"cells": PackedInt32Array(65539, 65525, 0, 65539, 7, 0, 131063, 6, 0, 131063, 65530, 0, 196602, 12, 0, 327662, 65525, 0, 327657, 3, 0, 327676, 19, 0)
}
metadata/_editor_floor_ = Vector3(0, 4, 0)

[node name="Trees" type="Node3D" parent="."]

[node name="tree4" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.5757, 3.78172, 22.8645)

[node name="tree" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, 0)

[node name="tree3" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 6, 34)

[node name="tree2" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 2, 0)

[node name="tree5" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.9313, 6.18416, -21.318)

[node name="tree6" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.9313, 6.18416, -10.1765)

[node name="tree7" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(2.12306, 0, 0, 0, 2.12306, 0, 0, 0, 1, -38.4146, 7.91092, -21.604)

[node name="tree8" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1.71619, 0, 0.588689, 0, 2.12306, 0, -1.24982, 0, 0.80836, -48.2585, 7.91092, 9.20764)

[node name="tree9" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1.71619, 0, 0.588689, 0, 2.12306, 0, -1.24982, 0, 0.80836, 11.1997, 7.91092, -35.0667)

[node name="tree10" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1.71619, 0, 0.588689, 0, 2.12306, 0, -1.24982, 0, 0.80836, 2.10134, 7.71251, -40.8998)

[node name="tree11" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 1.27465, 0, 0, 0, 1.31093, 13.8132, 2, -12.7633)

[node name="tree12" parent="Trees" instance=ExtResource("9_0rm7y")]
transform = Transform3D(1, 0, 0, 0, 2.79169, 0, 0, 0, 1.59179, -6.06437, 2, -12.7633)
